# financepipeline

financial-engine-cpp/: CMakeLists.txt
financial-engine-cpp/include/: stock_data.h  yahoo_finance_api.h
financial-engine-cpp/src/: data_persistence.cpp  yahoo_finance_api.cpp
financial-engine-front/stock-dashboard/: package-lock.json  package.json
financial-engine-front/stock-dashboard/src/: index.css
